# virtual-laboratory

./: .gitignore  README.md  package-lock.json
..bfg-report/2024-11-18/17-15-50/: cache-stats.txt  object-id-map.old-new.txt
backend/: .env.sample  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/db/: activityDB.py  database.py
backend/app/reports/: analyticsRouter.py  complexity_report.py  efficiency_report.py  openAI.py  report_collect.py
backend/app/routers/: activityRouter.py  authRouter.py  router.py
backend/tests/: route_test.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.js  App.jsx  App.test.jsx
frontend/src/Components/: Cards.js  DateFilter.jsx  DiagramFormat.js  DiagramFormat.jsx  EventsNavigation.js  EventsNavigation.jsx  Navbar.js  Navbar.jsx  PageContent.js  PrivateRoute.jsx  SearchBar.js  SearchBar.jsx  SearchResult.js  SearchResult.jsx  SearchResultList.jsx  Slider.js  TableFormat.js  TableFormat.jsx
frontend/src/Contexts/: AuthContext.jsx  UserContext.jsx
frontend/src/FakeData/: Data.js  tasks_data.js
frontend/src/Pages/: ActivityPage.js  ActivityPage.jsx  AnalyticsPage.js  AnalyticsPage.jsx  Error.js  Error.jsx  EventsLayout.js  EventsLayout.jsx  HomePage.js  HomePage.jsx  LeadersPage.js  LeadersPage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx  StatisticsPage.js  StatisticsPage.jsx
frontend/src/Styles/: Activity.css  Analytics.css  Cards.css  DateFilter.css  EventsNavigation.css  HomePage.css  LeadersPage.css  Navbar.css  (+11 more)
src/: App.js
src/Components/: Navbar.js
(+2 files in other folders)
