[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vasyl Komarnytskyi <vk.vasylkomarnytskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = {extras = ["standart"], version = "^0.32.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
