[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vasyl Komarnytskyi <vk.vasylkomarnytskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
